--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="login-screen">
         <div class="login-card">
             <h2 class="text-3xl font-bold text-white mb-2">Compañeros</h2>
-            <p class="text-gray-400 text-sm mb-4">Seleccione su nombre o escriba uno nuevo para ingresar</p>
+            <p class="text-gray-400 text-sm mb-4">escriba su nombre para ingresar</p>
 
             <form id="login-form">
                 <div class="select-container">
@@ -27,7 +27,7 @@
 
                     <div id="name-list" class="hidden"></div>
                 </div>
-                <button type="submit" class="btn-primary">INGRESAR AL MAPA</button>
+                <button type="submit" class="btn-primary">Ir AL MAPA</button>
             </form>
         </div>
     </div>
@@ -84,3 +84,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
