--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="login-screen">
         <div class="login-card">
             <h2 class="text-3xl font-bold text-white mb-2">Compañeros</h2>
-            <p class="text-gray-400 text-sm mb-4">escriba su nombre para ingresar</p>
+            <p class="text-gray-400 text-sm mb-4">Seleccione su nombre o escriba uno nuevo para ingresar</p>
 
             <form id="login-form">
                 <div class="select-container">
@@ -27,7 +27,7 @@
 
                     <div id="name-list" class="hidden"></div>
                 </div>
-                <button type="submit" class="btn-primary">Ir AL MAPA</button>
+                <button type="submit" class="btn-primary">INGRESAR AL MAPA</button>
             </form>
         </div>
     </div>
@@ -55,33 +55,32 @@
 
             <div id="aisle-1-container"></div> <div id="aisle-2-container"></div>
             <div id="aisle-3-container"></div> <div id="aisle-4-container"></div>
-            <div id="aisle-5-container"></div> 
-            <!-- <div id="aisle-6-container"></div> -->
-            <!-- <div id="aisle-7-container"></div> <div id="aisle-8-container"></div>
-            <div id="aisle-9-container"></div> <div id="aisle-10-container"></div>
+            <div id="aisle-5-container"></div> <div id="aisle-6-container"></div>
+            <div id="aisle-7-container"></div> 
+            <!-- <div id="aisle-8-container"></div> -->
+            <!-- <div id="aisle-9-container"></div> <div id="aisle-10-container"></div>
             <div id="aisle-11-container"></div> <div id="aisle-12-container"></div>
             <div id="aisle-13-container"></div> <div id="aisle-14-container"></div>
-            <div id="aisle-15-container"></div> <div id="aisle-16-container"></div>             -->
-            <!-- <div id="deposito-abajo-container" class="col-span-1 mt-1"> -->
+            <div id="aisle-15-container"></div> <div id="aisle-16-container"></div>             --> -->
+            <!-- <!-- <div id="deposito-abajo-container" class="col-span-1 mt-1"> -->
                 <div id="deposito-abajo-node" class="aisle-node cursor-pointer">
-                    <!-- <div class="flex flex-col"> -->
+                    <div class="flex flex-col">
                         <!-- <span class="text-1xl mb-1">👇</span> -->
                         <!-- <h3 class="font-bold text-white uppercase text-sm">Depósito Abajo</h3> -->
-                    <!-- </div> -->
+                    </div>
                 </div>
             </div>
-            <!-- <div id="deposito-arriba-container" class="col-span-1 mt-1"> -->
+            <div id="deposito-arriba-container" class="col-span-1 mt-1">
                 <div id="deposito-arriba-node" class="aisle-node cursor-pointer">
                     <!-- <div class="flex flex-col"> -->
                         <!-- <span class="text-1xl mb-1">👆</span> -->
-                        <!-- <h3 class="font-bold text-white uppercase text-sm">Depósito Arriba</h3> -->
-                    <!-- </div> -->
+                        <!-- <!-- <h3 class="font-bold text-white uppercase text-sm">Depósito Arriba</h3> -->
+                    </div>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
 
     <script src="script.js"></script>
 </body>
 </html>
-
