Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/pasillo-2.html
+++ b/pasillo-2.html
@@ -862,18 +862,22 @@
         window.triggerCelebration = null;
 
 const defaultProductNames = [
-              "ACEITE AGROIL *12",
-  "ACEITE MI ACEITE *12",
+  "ACEITE AGROIL*12",
+  "ACEITE DE OLIVA FRAGRUA 250ML",
+  "ACEITE DE OLIVA CAPRI 250ML",
+  "ACEITE DE OLIVA CAPRI 500ML",
+  "ACEITE MI ACEITE*12",
   "ACEITE NATUROIL",
+  "ACEITE GOTA DE ORO *12",
   "ACEITE PORTUMESA",
-  "ACEITE VATEL DE LITRO *12",
-  "ATUN DIPOLATICO *48",
+  "ACEITE VATEL DE LITRO*12",
+  "ATUN DIPlOMATICO*48",
   "ATUN PACIFICO *48",
-  "ATUN PEÑERO AZUL *48",
   "ATUN PEÑERO VERDE *12",
   "AVENA DE VITA",
   "AVENA DON JORGE",
   "AVENA QUAKER",
+  "AVENA 8 DE MARZO",
   "CAFÉ CORDILLERA 200GRMS",
   "CAFÉ CORDILLERA 500 GRMS",
   "CAFÉ EN GRANO 250GR DULCE AMAR",
@@ -884,19 +888,19 @@ const defaultProductNames = [
   "CAFÉ VARINA",
   "CARNE DE SOYA",
   "FORORO VALLE HONDO",
-  "HARINA DE AVENA QUAKER",
+  "HARINA DE AVENE QUAKER",
   "HARINA DE TRIGO ESPECIAL LEUDANTE",
   "HARINA DE TRIGO ESPECIAL TODO USO",
-  "HARINA DE TRIGO MARY",
   "HARINA TRIGO DULCE MAR",
   "LECHE LA CAMPIÑA",
   "LECHE MONTAÑA FRESCA",
   "LECHE VALLELAC",
-  "SARDINA",
+  "SARDINA PEÑERO",
   "SARDINA INCOSA",
   "SARDINA VEMPOR",
   "TAMARINDO EL ESFUERZO"
-];
+        ];
+
 
 
         // Función para generar la estructura de inventario inicial
@@ -1976,4 +1980,5 @@ const defaultProductNames = [
         }
     </script>
 </body>
+
 </html>
